# WitchcraftDependencies

./: CMakeLists.txt  LICENSE  README.md
f2h/: CMakeLists.txt  CMakePresets.json  FileToHeader.cpp  LICENSE  README.md
lua/: CMakePresets.json
